Fix: bug with input fields too big for container on Samsung tablet

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -514,6 +514,13 @@ footer {
     flex: 0;
     max-width: 30rem;
   }
+
+  #fav-seeds,
+  #f-name,
+  #l-name,
+  #email  {
+    width: 10.5rem;
+  }
 }
 
 /* Media query: 768px and up (Tablets) */
@@ -620,6 +627,14 @@ footer {
   /* About us */
   .form-flex-container {
     gap: 1.3rem;
+    width: 
+  }
+
+  #fav-seeds,
+  #f-name,
+  #l-name,
+  #email  {
+    width: auto;
   }
 
   /* Welcome page */
